--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,8 +81,18 @@ li:nth-child(odd) {
   border-top: 2px solid #ccc;
 }
 
-.timer {
+#timer {
   position: absolute;
   top: 10px;
   right: 10px;
+}
+
+#display-result {
+  margin-top: 20px;
+}
+
+#result-value{
+ font-style: italic;
+ font-weight: lighter;
+ color: grey;
 }
